- Placeholders from placeholder API can now be used in messages.yml
- Added admin commands to enable and disable chest claim for a period of time (/teama chest disableclaims, /teama chest enableclaims)

Bug Fixes: 
- /team neutral double message (https://github.com/booksaw/BetterTeams/issues/32)  
- Fixed multiple typos within messages.yml (https://github.com/booksaw/BetterTeams/issues/31)
- Fixed problem where the placeholder (teamscore) was not working correctly
- Fixed problem with /team top

3.1.12: 
Features:
- Language options for subcommands ie /team make can be changed to /team make
- More inbuilt team features, such as disabling collision for team members, hiding players nametags etc.

Improvements:
- Added a character ban list in the config
- Added the ability to change the default team color

Bug Fixes: 
- Added a hard ban on the symbol '&' as it caused many problems within the plugin
- Fixed problem where some messages could not contain placeholders

3.1.14: 
Features: 
- Added support for polish
- Added team enderchests
- Added the option for individual teams to toggle pvp for their team with /team pvp

Improvements:
- Added an allowed characters list for team names, leave blank if you do not want to utilise it
- Score for a kill is configurable
- Added placeholder support for chat prefixing

Bug Fixes:
- Fixed bypass on adding color codes to team names
- Fixed bug causing team balance to be displayed incorrectly (https://github.com/booksaw/BetterTeams/issues/37)

3.1.15: 
Features: 
- Configurable aliases for /team and /teama command (for example /clan)

Improvements:
- Full Polish translation is now avaliable
- Added a way to use player name instead of player display name in team/ally chat

Bug Fixes: 


TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
